# hirngespinst

./: CMakeLists.txt  README.md
include/hg/: builder.h  hirngespinst.h
include/hg/core/: core.h
include/hg/dsl/: attribute_binder.h  attribute_setter.h  event_binder.h  id.h  node.h
include/hg/elements/: button.h  element.h  input.h
src/: ui.cpp
